--- a/mensagem.html
+++ b/mensagem.html
@@ -32,7 +32,20 @@
         <h4>OOOIII MEU AMOR, desejo que voce seja muito feliz e que voce continue sendo essa amiga incrível que voce é, amo os nossos momentos e nossas risadas juntas, voce é uma pessoa muito especial, amo ter sua amizade e sua companhia, quero ser sua amiga pra sempre, amo voceeee 💗</h4>
     </main>
 
-    <main class></main>
+    <main class="matheus">
+        <header>Matheus</header>
+        <h4>MANDINHAH, feliz aniversário!
+
+Hoje é o seu dia, e eu queria te desejar tudo de melhor! Que você tenha um dia cheio de amor, alegria e realizações. Você é uma pessoa incrível e merece todo o bem do mundo.
+
+Que esse ano seja repleto de conquistas e momentos inesquecíveis. E tb que você continue sendo a pessoa maravilhosa que é.
+
+Agradeço por ter você na minha vida e por todos os momentos incríveis que compartilhamos. Você é uma pessoa incrível e única!!!😭😭💗</h4>
+    </main>
+    <main class="beatrizI">
+        <header>Beatriz</header>
+        <h4>Feliz aniversário, princesa! Que sua vida seja repleta de bênçãos. Que você continue sendo essa menina maravilhosa que contagia todo mundo com alegria. Eu espero que nossa amizade cresça cada dia mais. Aproveita muito seu dia. Eu te amo muito, bb💜</h4>
+    </main>
     <footer></footer>
 </body>
 </html>
