--- a/fotos.html
+++ b/fotos.html
@@ -17,7 +17,6 @@
             <li><a href="Index.html">Início</a></li>
             <li><a href="mensagem.html">Mensagem</a></li>
             <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="videos.html">Memorias</a></li>
         </ul>
     </nav>
 
@@ -26,6 +25,32 @@
         <h4><p>Seus amigos deiram fotos com você que Nunca vão esquecer!</p></h4>
             
         </p>
+    </main>
+    <main class="foto1">
+        <header>Mariana</header>
+        <h2>Mariana quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="mari1.jpeg">
+        <img src="mari2.jpeg">
+    </main>
+    <main class="foto2">
+        <header>Matheus</header>
+        <h2>Matheus quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="matheus.jpeg">
+        <img src="matheus2.jpeg">
+        <img src="matheuseamandah.jpeg">
+    </main>
+    <main class="foto3">
+        <header>Beatriz</header>
+        <h2>Beatriz quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="emo e amandah.jpeg">
+        </main>
+    
+    <main class="foto4">
+        <header>Giovanna</header>
+        <h2>Giovanna quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="giovanna.jpeg">
+
+
     </main>
 
     <footer></footer>
