--- a/mensagem.html
+++ b/mensagem.html
@@ -14,10 +14,10 @@
 <!--NAO MEXA NESTA MERDA-->
     <nav>
         <ul>
-            <li><a href="Index.html">Início</a></li>
+            <li><a href="Index.html">Início</a></li> 
             <li><a href="mensagem.html">Mensagem</a></li>
             <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="videos.html">Memorias</a></li>
+  
         </ul>
     </nav>
 
@@ -45,6 +45,10 @@ Agradeço por ter você na minha vida e por todos os momentos incríveis que com
     <main class="beatrizI">
         <header>Beatriz</header>
         <h4>Feliz aniversário, princesa! Que sua vida seja repleta de bênçãos. Que você continue sendo essa menina maravilhosa que contagia todo mundo com alegria. Eu espero que nossa amizade cresça cada dia mais. Aproveita muito seu dia. Eu te amo muito, bb💜</h4>
+    </main>
+    <main class="giovanna">
+        <header>Giovanna</header>
+        <h4>É aquele tipo de conexão que não precisa de explicação, duas almas leves, confortáveis uma com a outra, dividindo risos, silêncio e cumplicidade. Tem carinho nos detalhes, você transparece amizade de verdade, dessas que aquecem o coração, que fazem qualquer momento simples virar especial. Uma energia de “tô bem aqui, com você, e isso basta”, e é isso que torna você extremamente especial e única</h4>
     </main>
     <footer></footer>
 </body>
