--- a/videos.html
+++ b/videos.html
@@ -16,8 +16,7 @@
         <ul>
             <li><a href="Index.html">Início</a></li>
             <li><a href="mensagem.html">Mensagem</a></li>
-            <li><a href="fotos.html">Fotos</a></li>
-            <li><a href="videos.html">Memorias</a></li>
+            <li><a href="fotos.html">Fotos</a></li>>
         </ul>
     </nav>
 
