lari, giulia e anaB

--- a/fotos.html
+++ b/fotos.html
@@ -52,6 +52,23 @@
 
 
     </main>
+    <main class="foto5">
+        <header>Giulia</header>
+        <h2>Giulia quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="giulia.jpeg">
+    </main>
+    <main class="foto6">
+        <header>Lari</header>
+        <h2>Lari quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="lari.jpeg">
+    </main>
+    <main class="foto7">
+        <header>Ana Beatriz</header>
+        <h2>Ana Beatriz quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="anab1.jpeg">
+        <img src="anab2.jpeg">
+        <img src="anab3.jpeg">
+    </main>
 
     <footer></footer>
 </body>
