--- a/mensagem.html
+++ b/mensagem.html
@@ -50,6 +50,27 @@ Agradeço por ter você na minha vida e por todos os momentos incríveis que com
         <header>Giovanna</header>
         <h4>É aquele tipo de conexão que não precisa de explicação, duas almas leves, confortáveis uma com a outra, dividindo risos, silêncio e cumplicidade. Tem carinho nos detalhes, você transparece amizade de verdade, dessas que aquecem o coração, que fazem qualquer momento simples virar especial. Uma energia de “tô bem aqui, com você, e isso basta”, e é isso que torna você extremamente especial e única</h4>
     </main>
+    <main class="giulia">
+        <header>Giulia</header>
+        <h4>feliz aniversário, amandah! Eu amo você, e sempre agradeço a nossa amizade, porque jamais eu vi um amor tão puro quanto o nosso. Obrigada por ser tão presente em todos os momentos e eu fico feliz de estar presente nos seus também! Você me completa, e eu não posso imaginar quão triste eu seria se num dia qualquer a gente nunca tivesse sentado juntas, ou se eu nunca tivesse criado coragem pra elogiar suas tranças lá em 2024. Parabéns pelos 17, Amandah, que seja acompanhada de muita felicidade e amor sempre. Com amor, Giulia</h4>
+    </main>
+    <main class="lari">
+        <header>Larissa</header>
+        <h4>FELIZ ANIVERSÁRIO AMANDAH! 
+
+hoje é o teu dia e eu não poderia deixar de te desejar tudo de bom! Que este novo ciclo venha repleto de alegrias, conquistas,amor, saúde e momentos incríveis ao lado das pessoas que te querem bem e que eu sou uma delas!
+você é uma amiga especial,daquelas que iluminam o caminho com um sorriso e tornam tudo mais leve com sua presença. 
+Aproveite muito o seu dia,celebra do jeitinho que você merece,e nunca se esqueça do quanto EU TE AMO!
+Parabéns,princesa! Que venham muitos anos incríveis pela frente</h4>
+    </main>
+    <main class="anaB">
+        <header>Ana Beatriz</header>
+        <h4>Feliz aniversário, Amandinhah!! 🥳🥳
+17 anos. Tá quase atingindo a maioridade, ein! Uma das melhores coisas que eu fiz foi ter puxado assunto com vc lá em 2022 e ter conhecido essa pessoa incrível, gentil, carinhosa, curiosa, leal, extrovertida e mtas outras qualidades vc tem e é. 
+Orando mto pra tu ir num show do belo e ainda ficar na grade pra poder ver ele direitinho! 😺🙌🕯
+Conte sempre cmg, pro que der e vier. É sempre mto bom passar tempo com vc. 
+Aproveite mto esse seu dia, vc merece demais!! 🧡🧡</h4>
+    </main>
     <footer></footer>
 </body>
 </html>
