--- a/fotos.html
+++ b/fotos.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>Fotos duram para sempre!</h2>
-        <h4><p>Seus amigos deiram fotos com você que Nunca vão esquecer!</p></h4>
+        <h4><p>Seus amigos compartilharam fotos com você que Nunca vão esquecer!</p></h4>
             
         </p>
     </main>
@@ -68,6 +68,12 @@
         <img src="anab1.jpeg">
         <img src="anab2.jpeg">
         <img src="anab3.jpeg">
+    </main>
+
+    <main class="foto8">
+        <header>Maria</header>
+        <h2>Maria quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="maria.jpeg">
     </main>
 
     <footer></footer>
