--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,7 +14,7 @@
 <!--NAO MEXA NESTA MERDA-->
     <nav>
         <ul>
-            <li><a href="Index.html">Início</a></li>
+            <li><a href="index.html">Início</a></li>
      
             <li><a href="mensagem.html">Mensagem</a></li>
             <li><a href="fotos.html">Fotos</a></li>
@@ -28,7 +27,7 @@
         <h2>Seja bem vinda amandinha!</h2>
         <h4><p>Esse é meu presente pra você, espero que goste!</p></h4>
     </main>
-<!--nao mexe em nada nao man-->
+
 
     <footer></footer>
 </body>
