--- a/mensagem.html
+++ b/mensagem.html
@@ -14,7 +14,7 @@
 <!--NAO MEXA NESTA MERDA-->
     <nav>
         <ul>
-            <li><a href="Index.html">Início</a></li> 
+            <li><a href="index.html">Início</a></li> 
             <li><a href="mensagem.html">Mensagem</a></li>
             <li><a href="fotos.html">Fotos</a></li>
   
