--- a/fotos.html
+++ b/fotos.html
@@ -76,6 +76,12 @@
         <img src="maria.jpeg">
     </main>
 
+    <main class="foto9">
+        <header>Ana Alice</header>
+        <h2>Ana Alice quer que você se lembre de todos os momentos felizes que vocês compartilharam!</h2>
+        <img src="anaalice.jpg">
+    </main>
+
     <footer></footer>
 </body>
 </html>
