--- a/mensagem.html
+++ b/mensagem.html
@@ -74,6 +74,20 @@ Orando mto pra tu ir num show do belo e ainda ficar na grade pra poder ver ele d
 Conte sempre cmg, pro que der e vier. É sempre mto bom passar tempo com vc. 
 Aproveite mto esse seu dia, vc merece demais!! 🧡🧡</h4>
     </main>
+
+    <main class="lyna">
+        <header>Lyna</header>
+        <h4>Parabéns, meu amor! Eu gostaria de lhe desejar tudo de bom e que o mundo possa lhe proporcionar coisas incríveis. Que você permaneça sendo esse alguém que nos cativa e incentiva, aproveite o seu dia!</h4>
+    </main>
+     <main class="anaL">
+        <header>Anna Alice</header>
+        <h4>mandinha dayyy!! ♡
+feliz seu dia meu amorr, você merece tudo de bom dessa vida, merece ter a felicidade e realizar todos os seus sonhos, merece encontrar seu caminho e achar seus propósitos!! lembre-se do quão especial e importante você é, não só pra mim mas pra cada pessoa em sua vida, saiba o quão incrível e maravilhosa você é, uma menina doce, carismática e amável, além de ouvinte e uma ótima conselheira, eu te devo e agradeço muito por cada ajuda, cada conselho, você não sabe como me ajudou tanto!! obrigada por tudo, obrigada por se importar tanto e está sempre perto pra ajudar quem você mais ama, tenho certeza que cada pessoa que te conhece concordaria com isso, concordaria e teria certeza da garota incrível e perfeita do seu jeitinho!
+então eu te desejo de coração um dia maravilhoso, que você aproveite cada momento, cada minuto do seu dia, eu te amo muitooooo muito!! 🩷🩷
+        
+Anna Alice/Nana
+        </h4>
+     </main>
     <footer></footer>
 </body>
 </html>
