--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feliz aniversário Amandah!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css" integrity="sha512-t7Few9xlddEmgd3oKZQahkNI4dS6l80+eGEzFQiqtyVYdvcSG2D3Iub77R20BdotfRPA9caaRkg1tyaJiPmO0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
     <header>
         <h1>Feliz aniversário Amandah!</h1>
     </header>
-<!--NAO MEXA NESTA MERDA-->
+<!--NAO MEXA-->
     <nav>
         <ul>
             <li><a href="index.html">Início</a></li>  
@@ -23,9 +26,28 @@
 
     <main>
         <header class="sophia">Sophia</header>
-        <h2>Seja bem vinda amandinha!</h2>
+        <h2>Seja bem vinda Amandinha!</h2>
         <h4><p>Esse é meu presente pra você, espero que goste!</p></h4>
+       
     </main>
+
+    <main class="bolinho">
+        <header>Parabéns pra você!</header>
+         <button id="btnConfete" class="btn btn-warning btn-lg shadow rounded-pill">
+    <i class="bi bi-cake2-fill me-2"></i> 
+</button>
+    </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <script>
+            document.getElementById("btnConfete").addEventListener("click", function() {
+                confetti({
+                    particleCount: 150,
+                    spread: 70,
+                    origin: { y: 0.6 }
+                });
+            });
+        </script>
     <footer></footer>
 </body>
+
 </html>
